[UI] Fix currency align

--- a/src/ui/pages/app/Settings.css
+++ b/src/ui/pages/app/Settings.css
@@ -59,5 +59,5 @@
 }
 
 .page.settings > .setting-item > .menu-button > .display-currency > span {
-  margin-bottom: -1px;
+  /* margin-bottom: -1px; */
 }
